// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APISectionUtils.resolveTypeName Promise 1`] = `
<div>
  <a
    class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise"
    rel="noopener noreferrer"
    target="_blank"
  >
    Promise
  </a>
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    void
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName Promise with custom type 1`] = `
<div>
  <a
    class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise"
    rel="noopener noreferrer"
    target="_blank"
  >
    Promise
  </a>
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="#appleauthenticationcredential"
    >
      AppleAuthenticationCredential
    </a>
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName Record 1`] = `
<div>
  Record
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    string
    <span
      class="text-quaternary"
    >
      , 
    </span>
  </span>
  <span>
    any
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName Record with union 1`] = `
<div>
  Record
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    string
    <span
      class="text-quaternary"
    >
      , 
    </span>
  </span>
  <span>
    <span>
      number
      <span
        class="text-quaternary"
      >
         | 
      </span>
    </span>
    <span>
      boolean
      <span
        class="text-quaternary"
      >
         | 
      </span>
    </span>
    <span>
      string
    </span>
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName alternative generic object notation 1`] = `
<div>
  <span
    class="text-quaternary"
  >
    {
  </span>
   [column]: any 
  <span
    class="text-quaternary"
  >
    }
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type 1`] = `
<div>
  <a
    class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
    href="https://developer.mozilla.org/en-US/docs/Web/API/SpeechSynthesisEvent"
    rel="noopener noreferrer"
    target="_blank"
  >
    SpeechSynthesisEvent
  </a>
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type array 1`] = `
<div>
  <a
    class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
    href="#appleauthenticationscope"
  >
    AppleAuthenticationScope
    []
  </a>
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type non-linkable array 1`] = `
<div>
  T[]
</div>
`;

exports[`APISectionUtils.resolveTypeName custom type with single pick 1`] = `
<div>
  <a
    class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
    href="https://www.typescriptlang.org/docs/handbook/utility-types.html#picktype-keys"
    rel="noopener noreferrer"
    target="_blank"
  >
    Pick
  </a>
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="#fontresource"
    >
      FontResource
    </a>
    <span
      class="text-quaternary"
    >
      , 
    </span>
  </span>
  <span>
    'display'
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName function 1`] = `
<div>
  <span
    class="text-quaternary"
  >
    () =&gt;
  </span>
   
  <span>
    void
    <span
      class="text-quaternary"
    >
       | 
    </span>
  </span>
  <span>
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="#speecheventcallback"
    >
      SpeechEventCallback
    </a>
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName function with arguments 1`] = `
<div>
  <span
    class="text-quaternary"
  >
    (
  </span>
  <span>
    error
    <span
      class="text-quaternary"
    >
      :
    </span>
     
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error"
      rel="noopener noreferrer"
      target="_blank"
    >
      Error
    </a>
  </span>
  <span
    class="text-quaternary"
  >
    ) =&gt;
  </span>
   
  <span>
    void
    <span
      class="text-quaternary"
    >
       | 
    </span>
  </span>
  <span>
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="#speecheventcallback"
    >
      SpeechEventCallback
    </a>
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName function with non-linkable custom type 1`] = `
<div>
  <span
    class="text-quaternary"
  >
    (
  </span>
  <span>
    error
    <span
      class="text-quaternary"
    >
      :
    </span>
     
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error"
      rel="noopener noreferrer"
      target="_blank"
    >
      Error
    </a>
  </span>
  <span
    class="text-quaternary"
  >
    ) =&gt;
  </span>
   
  void
</div>
`;

exports[`APISectionUtils.resolveTypeName generic type 1`] = `
<div>
  string
</div>
`;

exports[`APISectionUtils.resolveTypeName generic type 2`] = `
<div>
  <a
    class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
    href="#pagedinfo"
  >
    PagedInfo
  </a>
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="/versions/latest/sdk/asset#asset"
    >
      Asset
    </a>
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName generic type in Promise 1`] = `
<div>
  <a
    class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise"
    rel="noopener noreferrer"
    target="_blank"
  >
    Promise
  </a>
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="#pagedinfo"
    >
      PagedInfo
    </a>
    <span
      class="text-quaternary"
    >
      &lt;
    </span>
    <span>
      <a
        class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
        href="/versions/latest/sdk/asset#asset"
      >
        Asset
      </a>
    </span>
    <span
      class="text-quaternary"
    >
      &gt;
    </span>
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName object reflection 1`] = `
<div>
  <span
    class="text-quaternary"
  >
    {

  </span>
  <span>
      
    target: 
    number
    , 
    

  </span>
  <span>
      
    value: 
    boolean
    

  </span>
  <span
    class="text-quaternary"
  >
    }
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName props with multiple omits 1`] = `
<div>
  StyleProp
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="https://www.typescriptlang.org/docs/handbook/utility-types.html#omittype-keys"
      rel="noopener noreferrer"
      target="_blank"
    >
      Omit
    </a>
    <span
      class="text-quaternary"
    >
      &lt;
    </span>
    <span>
      <a
        class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
        href="https://reactnative.dev/docs/view-style-props"
        rel="noopener noreferrer"
        target="_blank"
      >
        ViewStyle
      </a>
      <span
        class="text-quaternary"
      >
        , 
      </span>
    </span>
    <span>
      <span>
        'backgroundColor'
        <span
          class="text-quaternary"
        >
           | 
        </span>
      </span>
      <span>
        'borderRadius'
      </span>
    </span>
    <span
      class="text-quaternary"
    >
      &gt;
    </span>
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName query type 1`] = `
<div>
  React.ComponentProps
  <span
    class="text-quaternary"
  >
    &lt;
  </span>
  <span>
    View
  </span>
  <span
    class="text-quaternary"
  >
    &gt;
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName tuple type 1`] = `
<div>
  <span
    class="text-quaternary"
  >
    [
  </span>
  <span>
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="#sortbykey"
    >
      SortByKey
    </a>
    <span
      class="text-quaternary"
    >
      , 
    </span>
  </span>
  <span>
    boolean
  </span>
  <span
    class="text-quaternary"
  >
    ]
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName union 1`] = `
<div>
  <span>
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="#speecheventcallback"
    >
      SpeechEventCallback
    </a>
    <span
      class="text-quaternary"
    >
       | 
    </span>
  </span>
  <span>
    null
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName union of array values 1`] = `
<div>
  <span
    class="text-quaternary"
  >
    (
  </span>
  <span>
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="#resultseterror"
    >
      ResultSetError
    </a>
    <span
      class="text-quaternary"
    >
       | 
    </span>
  </span>
  <span>
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="#resultset"
    >
      ResultSet
    </a>
  </span>
  <span
    class="text-quaternary"
  >
    )
  </span>
  <span
    class="text-quaternary"
  >
    []
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName union with array 1`] = `
<div>
  <span>
    number[]
    <span
      class="text-quaternary"
    >
       | 
    </span>
  </span>
  <span>
    null
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName union with custom type and array 1`] = `
<div>
  <span>
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="#assetref"
    >
      AssetRef
      []
    </a>
    <span
      class="text-quaternary"
    >
       | 
    </span>
  </span>
  <span>
    <a
      class="cursor-pointer decoration-0 hocus:opacity-80 font-normal text-link visited:text-link hocus:underline [&_code]:hocus:underline [&_b]:text-link [&_code]:text-link [&_em]:text-link [&_i]:text-link [&_span]:text-link [&_strong]:text-link"
      href="#assetref"
    >
      AssetRef
    </a>
  </span>
</div>
`;

exports[`APISectionUtils.resolveTypeName void 1`] = `
<div>
  void
</div>
`;
